# ASH

./: .env.example  .gitignore  .gitleaks.toml  Makefile  README.md  docker-compose.yml  instructions.md
docs/: PLAN-DEV.md  PLAN-MULTIUSER-IDENTITY.md  STATUS.md  blueprint-index.md  (+3 more)
services/auth-service/: .gitignore  Dockerfile  README.md  pyproject.toml
services/auth-service/app/: __init__.py  jwt_rs256.py  keys.py  linking.py  main.py  models.py  service.py
services/auth-service/tests/: test_auth.py  test_linking.py
services/backend-core/: Dockerfile  README.md  pyproject.toml
services/backend-core/app/: __init__.py  admin.py  approvals.py  audit.py  bus.py  identity.py  main.py  models.py  oauth.py  pgstore.py  runner.py  store.py  webhooks.py
services/backend-core/tests/: test_admin.py  test_admin_data.py  test_admin_directory.py  test_admin_scope.py  test_api.py  test_approvals.py  test_audit.py  test_automations.py  test_bus_pg.py  test_identity.py  test_jwt_smoke.py  test_me_connections.py  test_oauth.py  test_oauth_tokens.py  test_rls_isolation.py  test_runner_agentic.py  test_runner_integrated.py  test_runner_opencode.py  test_runner_opencode_taint.py  test_tool_policies.py  test_webhooks.py
services/llm-proxy/: Dockerfile  README.md  config.yaml  pyproject.toml
services/llm-proxy/app/: __init__.py  backends.py  config.py  main.py  models.py  openai_compat.py  pricing.py  proxy.py  reference_prices.py  routing.py
services/llm-proxy/tests/: test_anthropic_backend.py  test_openai_compat.py  test_org_budget.py  test_price_drift.py  test_proxy.py  test_tools_loop.py
services/prompt-layer/: Dockerfile  README.md  demo_automation.py  demo_revocation.py  pyproject.toml
services/prompt-layer/app/: __init__.py  antivirus.py  billing.py  budget.py  classify.py  consolidation.py  context.py  erasure.py  event_triggers.py  guardrails.py  job_memory.py  main.py  memory.py  memory_mcp.py  oauth.py  pipeline.py  planner.py  policy.py  procedural.py  profiles.py  prompt_registry.py  redis_taint.py  scheduled.py  scheduler.py  task_jwt.py  team_mode.py  turn_router.py  workspace.py
services/prompt-layer/tests/: test_billing.py  test_budget.py  test_consolidation.py  test_context.py  test_event_triggers.py  test_events_erasure.py  test_guardrails.py  test_jobmem_workspace.py  test_memory.py  test_memory_api.py  test_memory_mcp.py  test_oauth.py  test_pipeline.py  test_planner.py  test_policy.py  test_procedural_profiles.py  test_reapprove.py  test_redis_taint_e2e.py  test_registry_av.py  test_scheduled.py  test_scheduler.py  test_task_jwt_es256.py  test_team_mode.py  test_turn_router.py
(+275 files in other folders)
