[project]
name = "auth-service"
version = "0.1.0"
description = "Axone auth-service — OIDC (stubbed), RS256 JWT, JWKS, key rotation (instructions.md §5, §8.1, §13.4)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
