[project]
name = "backend-core"
version = "0.1.0"
description = "Axone backend-core — REST+WS API (instructions.md §8.2)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "websockets>=12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
