[project]
name = "llm-proxy"
version = "0.1.0"
description = "Axone llm-proxy — model routing, budgets, fallback (instructions.md §9.5)"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6", "pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
# Production backends (swap StubBackend behind the same interface, §G.4):
prod = ["litellm>=1.40"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
