[project]
name = "prompt-layer"
version = "0.1.0"
description = "Axone prompt-layer — classify/plan/guardrails/permissions/routing (instructions.md §9)"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
